[#22586] List.of changed to Arrays.asList